# cursesweeper

./: .gitignore  CMakeLists.txt  minesweeper.c
